Fixed sizing issues with border box causing width overflow

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,10 @@
-html, body {
+* {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -23,16 +28,16 @@ html, body {
   background-repeat: no-repeat;
   color: whitesmoke;
   background-size: cover;
-  min-height: 100vh; 
-  min-width: 100vw;
+  /* min-height: 100vh; 
+  min-width: 100vw; */
 }
 
 @keyframes fade-in {
   0% {
-    filter:brightness(0) blur(5px);
+    filter:brightness(0);
   }
   100% {
-    filter: brightness(1) blur(0px);
+    filter: brightness(1);
   }
 }
 
