--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -5,8 +5,11 @@
   width: 100%;
   color: whitesmoke;
   font-size: 1em;
-  padding: 10px 20px;
   margin-top: 20%;
+}
+
+.footer p {
+  padding: 0 0 0 20px;
 }
 
 @media only screen and (max-width: 400px) {
