--- a/src/IconBar/IconBar.module.css
+++ b/src/IconBar/IconBar.module.css
@@ -4,7 +4,6 @@
   display: flex;
   right: 0;
   z-index: 4;
-  padding: 20px;
 }
 
 .iconBar ul {
@@ -14,7 +13,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  padding: 30px 0;
 }
 
 .iconBar li {
